testing git pages

--- a/incremental-dom-jsonml/demo/primer6/index.html
+++ b/incremental-dom-jsonml/demo/primer6/index.html
@@ -17,6 +17,7 @@
 	<script src="updater.js"></script>
 </head>
 <body>
+	<p>trying git pages</p>
 	<p>This is a port of <a href="http://binarymuse.github.io/react-primer/build/index.html?6" target="_blank">binarymuse's shouldComponent update demo for React</a>. The idom equivalent is elementPlaceholder, here used as attribute. Animate updates state for head item plus another random item, several ticks are batched before the next animationFrame collects them (the head is always animated to keep chrome's fps stats updating).</p>
 	<div id="approot"></div>
 
